swagger docs update, models descriptions, api/v1
